--- a/background/index.html
+++ b/background/index.html
@@ -108,7 +108,7 @@
 
     <div id="catalogue-items-panel" class="well" style="width:100%;margin:0;">
 
-        <h4 style="color:#fff;"><a href="/marketplace">market&nbsp;</a>/&nbsp;background:
+        <h4 style="color:#fff;"><a href="/marketplace">market&nbsp;/</a>&nbsp;backgrounds:
             <div id="counter-top-right" class="pull-right small items-counter" style="margin-top:4px;color:#ddd;">
                 <span class="from">zero</span>
                 to <span class="upto">zero</span>
