--- a/background/index.html
+++ b/background/index.html
@@ -110,9 +110,9 @@
 
         <h4 style="color:#fff;"><a href="/marketplace">market&nbsp;/</a>&nbsp;backgrounds:
             <div id="counter-top-right" class="pull-right small items-counter" style="margin-top:4px;color:#ddd;">
-                <span class="from">zero</span>
-                to <span class="upto">zero</span>
-                of <span class="count">none</span>
+                items <span class="from">-</span>
+                to <span class="upto">-</span>
+                of <span class="count">null</span>
             </div>
         </h4>
 
@@ -134,7 +134,7 @@
                 <li class="btn btn-primary btn-white-outline first-page-btn pull-left" style="margin-right:5px;">First</li>
                 <li class="btn btn-primary btn-white-outline get-prev-group-btn pull-left">&#9668;&#9668;</li>
                 <div id="counter-bottom-center" class="small items-counter" style="width:fit-content;display:inline;height:35px;margin-top:4px;color:#ddd;">
-                    <span class="from">zero</span> to <span class="upto">zero</span> of <span class="count">none</span>
+                    items <span class="from">-</span> to <span class="upto">-</span> of <span class="count">null</span>
                 </div>
                 <li class="btn btn-primary btn-white-outline last-page-btn pull-right" style="margin-left:5px;">Last</li>
                 <li class="btn btn-primary btn-white-outline get-next-group-btn pull-right">&#9658;&#9658;</li>
