--- a/background/index.html
+++ b/background/index.html
@@ -130,10 +130,10 @@
 
             <div id="products-display" class="well"></div>
 
-            <div style="margin:10px auto 10px auto;height:35px;max-width:350px;">
+            <div style="margin:10px auto 10px auto;height:35px;max-width:400px;">
                 <li class="btn btn-primary btn-white-outline first-page-btn pull-left" style="margin-right:5px;">First</li>
                 <li class="btn btn-primary btn-white-outline get-prev-group-btn pull-left">&#9668;&#9668;</li>
-                <div id="counter-bottom-center" class="small items-counter" style="width:fit-content;display:inline;height:35px;margin-top:4px;color:#ddd;">
+                <div id="counter-bottom-center" class="items-counter" style="width:fit-content;display:inline;height:35px;margin-top:4px;color:#ddd;">
                     items <span class="from">-</span> to <span class="upto">-</span> of <span class="count">null</span>
                 </div>
                 <li class="btn btn-primary btn-white-outline last-page-btn pull-right" style="margin-left:5px;">Last</li>
