--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -23,6 +23,11 @@
     <script src="/js/photoswipe.js"></script>
     <script src="/js/photoswipe-ui-default.js"></script>
 
+    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" 
+        data-api-key="MGY1ZGNjMWItZTk5NS00ZTFjLWExMGMtOWVlNjQxM2I2ZmYwNjM3MDI1NTA1ODY4NDc4NTkw">
+    </script>
+    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css">
+
 </head>
 
 <body>
