--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -106,6 +106,19 @@
         background:#ffffff33;
     }
 
+    /*  snipcart  */
+
+    .snipcart-add-item {
+        color:#fff;
+        min-width:50%;
+        font-size:2rem;
+        padding:6px 14px;
+        border:1px solid #ddd;
+        border-radius:20px;
+        background-color:#42bcf9;
+    }
+
+
 </style>
 
 <section class="mbr-section" id="catalogue-section">
