--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/photoswipe.css">
     <link rel="stylesheet" href="/css/photoswipe/default-skin.css">
+	<link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.5/default/snipcart.css" />
 
     <script>debugMode = true;</script>
     <script src="/socketcluster.js"></script>
@@ -23,11 +24,6 @@
     <script src="/js/photoswipe.js"></script>
     <script src="/js/photoswipe-ui-default.js"></script>
 
-	<script src="/js/jquery.min.js"></script>
-    <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" 
-        data-api-key="MGY1ZGNjMWItZTk5NS00ZTFjLWExMGMtOWVlNjQxM2I2ZmYwNjM3MDI1NTA1ODY4NDc4NTkw">
-    </script>
-    <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css">
 
 </head>
 
@@ -207,6 +203,7 @@
 
 </section>
 
+<script src="/js/jquery.min.js"></script>
 <script src="/js/jquery-ui.js"></script>
 <script src="/js/rawinflate.js"></script>
 <script src="/js/rawdeflate.js"></script>
@@ -242,6 +239,10 @@
 	});
 
 </script>
+
+
+<div hidden id="snipcart" data-api-key="MGY1ZGNjMWItZTk5NS00ZTFjLWExMGMtOWVlNjQxM2I2ZmYwNjM3MDI1NTA1ODY4NDc4NTkw"></div>
+<script src="https://cdn.snipcart.com/themes/v3.0.5/default/snipcart.js"></script>
 
 </body>
 </html>
