--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -113,6 +113,10 @@
         border-radius:20px;
         background-color:#42bcf9;
     }
+	
+	a.snipcart-add-item {
+		text-decoration:none;
+	}
 
 
 </style>
