--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -247,7 +247,9 @@
 
 <!--	PRODUCTS	-->
 
-<div>
+<!-- 
+
+<div style="display:none;">
 
 	<a class="snipcart-add-item"
 	   data-item-id="BGD458-648-006" 
@@ -349,6 +351,8 @@
 	</a>
 
 </div>
+
+-->
 
 <div hidden id="snipcart" data-api-key="MGY1ZGNjMWItZTk5NS00ZTFjLWExMGMtOWVlNjQxM2I2ZmYwNjM3MDI1NTA1ODY4NDc4NTkw"></div>
 <script src="https://cdn.snipcart.com/themes/v3.0.5/default/snipcart.js"></script>
