--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -106,7 +106,7 @@
 
     .snipcart-add-item {
         color:#fff;
-        min-width:50%;
+        width:100%;
         font-size:2rem;
         padding:6px 14px;
         border:1px solid #ddd;
@@ -117,6 +117,7 @@
 	a.snipcart-add-item {
 		cursor:pointer;
 		text-decoration:none;
+		background-color:#42bcf9;
 	}
 
 
