--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -110,14 +110,14 @@
         font-size:2rem;
         padding:6px 14px;
         border:1px solid #ddd;
-        border-radius:20px;
+        border-radius:20px !important;
         background-color:#42bcf9;
     }
 	
 	a.snipcart-add-item {
 		cursor:pointer;
 		text-decoration:none;
-		background-color:#42bcf9;
+		background-color:#42bcf9 !important;
 	}
 
 
