--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -256,7 +256,7 @@
 	   data-item-name="001" 
 	   data-item-price="0.45" 
 	   data-item-image="https://i.imgur.com/ivqfmOft.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
+	   data-item-url="/marketplace/backgrounds">
 		Add to cart
 	</a>
 
@@ -265,7 +265,7 @@
 	   data-item-name="autumn" 
 	   data-item-price="0.23" 
 	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
+	   data-item-url="/marketplace/backgrounds">
 		Add to cart
 	</a>
 
