--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -149,7 +149,108 @@
                 <li class="btn btn-primary get-next-btn pull-right">&#9658;</li>
             </div>
 
-            <div id="products-display" class="well"></div>
+            <div id="products-display" class="well">
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-648-006" 
+				   data-item-name="001" 
+				   data-item-price="0.45" 
+				   data-item-image="https://i.imgur.com/ivqfmOft.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-649-006" 
+				   data-item-name="autumn" 
+				   data-item-price="0.23" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-650-006" 
+				   data-item-name="darksea" 
+				   data-item-price="0.64" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-651-006" 
+				   data-item-name="dawnmountain" 
+				   data-item-price="0.35" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-652-006" 
+				   data-item-name="forest" 
+				   data-item-price="0.35" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-654-006" 
+				   data-item-name="garage" 
+				   data-item-price="0.40" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-655-006" 
+				   data-item-name="island-road" 
+				   data-item-price="0.50" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-655-006" 
+				   data-item-name="mebula" 
+				   data-item-price="0.42" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-656-006" 
+				   data-item-name="moondust" 
+				   data-item-price="0.38" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="https://sloothes.com/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-657-006" 
+				   data-item-name="pines-road" 
+				   data-item-price="0.74" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+				<a class="snipcart-add-item"
+				   data-item-id="BGD458-658-006" 
+				   data-item-name="road" 
+				   data-item-price="0.33" 
+				   data-item-image="https://i.imgur.com/beAmx5ut.png"
+				   data-item-url="/marketplace/backgrounds">
+					Add to cart
+				</a>
+
+			</div>
 
             <div style="margin:10px auto 10px auto;height:35px;max-width:400px;">
                 <li class="btn btn-primary btn-white-outline first-page-btn pull-left" style="margin-right:5px;">First</li>
@@ -231,7 +332,7 @@
 <script>
 
 //	Loader.
-
+/*
 	var manager = new THREE.LoadingManager();
 	var loader = new THREE.XHRLoader( manager );
 	loader.load( "demo.json", function ( text ) {
@@ -243,116 +344,14 @@
 		app.load( json );
 
 	});
-
+*/
 </script>
 
 <!--	PRODUCTS	-->
 
 
-<div>
+<div style="display:none;">
 
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-648-006" 
-	   data-item-name="001" 
-	   data-item-price="0.45" 
-	   data-item-image="https://i.imgur.com/ivqfmOft.png"
-	   data-item-url="/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-649-006" 
-	   data-item-name="autumn" 
-	   data-item-price="0.23" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-<!-- 
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-650-006" 
-	   data-item-name="darksea" 
-	   data-item-price="0.64" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-651-006" 
-	   data-item-name="dawnmountain" 
-	   data-item-price="0.35" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-652-006" 
-	   data-item-name="forest" 
-	   data-item-price="0.35" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-654-006" 
-	   data-item-name="garage" 
-	   data-item-price="0.40" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-655-006" 
-	   data-item-name="island-road" 
-	   data-item-price="0.50" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-655-006" 
-	   data-item-name="mebula" 
-	   data-item-price="0.42" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-656-006" 
-	   data-item-name="moondust" 
-	   data-item-price="0.38" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-657-006" 
-	   data-item-name="pines-road" 
-	   data-item-price="0.74" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
-	<a class="snipcart-add-item"
-	   data-item-id="BGD458-658-006" 
-	   data-item-name="road" 
-	   data-item-price="0.33" 
-	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-		Add to cart
-	</a>
-
--->
 
 </div>
 
