--- a/backgrounds/demo-index.html
+++ b/backgrounds/demo-index.html
@@ -150,7 +150,7 @@
             </div>
 
             <div id="products-display" class="well">
-			<!--
+
 				<a class="snipcart-add-item"
 				   data-item-id="BGD458-648-006" 
 				   data-item-name="001" 
@@ -249,7 +249,7 @@
 				   data-item-url="/marketplace/backgrounds">
 					Add to cart
 				</a>
-			-->
+
 			</div>
 
             <div style="margin:10px auto 10px auto;height:35px;max-width:400px;">
@@ -350,413 +350,10 @@
 <!--	PRODUCTS	-->
 
 
-<div style="display:none;"></div>
+<div style="display:none;">
 
 
-<script>
-
-//  Socketcluster.
-
-	socket = socketCluster.create({
-		hostname: "anywhere3d.com",
-		codecEngine: scCodecMinBin,
-	});
-
-	socket.on("connect", function(status){
-		debugMode && console.log({"status": status});
-	});
-
-	socket.on("error", function (err) {
-		console.error( err.stack );
-	});
-
-	socket.on("authStateChange", function( state ){
-		debugMode && console.log({"authStateChange": state});
-	});
-
-	socket.on("subscribe", function( name, object ){
-		debugMode && console.log("subscribed successfully to", name, "channel:", object);
-	});
-
-</script>
-
-<script>
-
-	const pagebuttons = document.getElementsByClassName("page-btn");
-	const displayObjects = document.getElementById("products-display");
-
-	const prevPageBtn  = document.getElementsByClassName("get-prev-btn").item(0);
-	const nextPageBtn  = document.getElementsByClassName("get-next-btn").item(0);
-	const lastPageBtn  = document.getElementsByClassName("last-page-btn").item(0);
-	const firstPageBtn = document.getElementsByClassName("first-page-btn").item(0);
-	const prevGroupBtn = document.getElementsByClassName("get-prev-group-btn").item(0);
-	const nextGroupBtn = document.getElementsByClassName("get-next-group-btn").item(0);
-
-	var timeout;
-	var interval;
-	var selectors;
-	var delay = 250;
-
-	var limit = 12;
-	var currency = "$"; // important!
-
-	var max = 0;
-	var skip = 0;
-	var lastpage = 0;
-	var currentpage = 0;
-	var currentindex = 0;
-
-	const collection = "skyboxes";
-
-	socket.on("connect", function(status){
-
-		count();
-
-	//  Page buttons init.
-		for ( var i = 0; i < pagebuttons.length; i++) {
-			pagebuttons.item(i).skip = limit * i;
-			pagebuttons.item(i).text = i + 1; // ( because is <a> and have text property )
-			pagebuttons.item(i).classList.remove("btn-primary");
-		}
-
-	//  Current button setup.
-		pagebuttons.item(0).classList.add("btn-primary");
-
-	//  Clear listed objects.
-		while( displayObjects.children.length ) {
-			displayObjects.children.item(0).remove();
-		}
-
-		getItems();
-
-	});
-
-	function count(){
-
-		var data =  {
-			selectors: {},
-			collection: collection,
-			options: {},
-		};
-
-		var counters = document.getElementsByClassName("count");
-
-		socket.emit("mongo count", data, function(err, num){
-			max = num; // important!
-			debugMode && console.log("max:", max);
-			for ( var i = 0; i < counters.length; i++ ) {
-				counters.item(i).textContent = max;
-			}
-		});
-
-	}
-
-	function reset(){
-
-		max = 0;
-		skip = 0;
-		lastpage = 0;
-		currentpage = 0;
-		currentindex = 0;
-
-	}
-
-	function getItems(){
-
-		var data = {
-			selectors: {},
-			collection: collection,
-			options: { 
-				skip:skip, limit:limit, 
-				fields:{ ext:1, posx:1, title:1, value:1, product_id:1 } 
-			}
-		};
-
-		socket.emit("mongo find", data, function(err, docs){
-			debugMode && console.log("docs:", docs);
-
-			if ( !docs.length ) return;
-
-			while( displayObjects.children.length ) {
-				displayObjects.children.item(0).remove(); // important!
-			}
-
-			docs.forEach(function(doc, index){
-
-				var card = document.createElement("li");
-				card.id = doc._id; // card.data = doc; // optional!
-				card.classList.add("well", "product-card");
-				card.style.cssText = "vertical-align:middle!important;";
-
-				var loader = new THREE.ImageLoader();
-				var url = "https://i.imgur.com/"+doc.posx+"t."+doc.ext;
-				var img = loader.load( url, function( img ){
-					img.classList.add("thumbnail");
-				});
-				img.style.cssText = "max-width:100%;height:auto;margin:0 auto 10px auto;";
-				card.appendChild(img);
-
-				var title = document.createElement("div");
-				title.style.cssText = "color:#fff;font-size:1.5em;font-weight:bold;max-width:100%;max-height:2em;margin:0 auto 10px auto;overflow:hidden;";
-				title.textContent = doc.title;
-				card.appendChild(title);
-
-				var price = document.createElement("div");
-				price.style.cssText = "color:#fff;font-size:2em;font-weight:bold;max-width:100%;max-height:3em;margin:0 auto 10px auto;";
-				price.textContent = doc.value;
-				card.appendChild(price);
-
-				var button = document.createElement("a");
-				button.text = "Add to cart";
-				button.classList.add( "snipcart-add-item" );
-				button.setAttribute("data-item-name", doc.title);
-				button.setAttribute("data-item-price", doc.value);
-				button.setAttribute("data-item-id", doc.product_id);
-				button.setAttribute("data-item-image", "https://i.imgur.com/"+doc.posx+"t."+doc.ext);
-				button.setAttribute("data-item-url", "/marketplace/backgrounds");
-				card.appendChild(button);
-
-			//	<a class="snipcart-add-item"
-			//	   data-item-id="BGD458-656-006" 
-			//	   data-item-name="moondust" 
-			//	   data-item-price="0.38" 
-			//	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-			//	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-			//		Add to cart
-			//	</a>
-
-				displayObjects.appendChild(card);
-
-			});
-
-		//  Display count info.
-
-			var spans = document.getElementsByClassName("from");
-			for ( var i = 0; i < spans.length; i++ ) {
-				if ( max == 0 ) spans.item(i).textContent = "-";
-				else if ( skip == max ) spans.item(i).textContent = skip;
-				else spans.item(i).textContent = skip + 1;
-			}
-
-			var spans = document.getElementsByClassName("upto");
-			for ( var i = 0; i < spans.length; i++ ) {
-				if ( max == 0 ) spans.item(i).textContent = "-";
-				else if ( skip == max ) spans.item(i).textContent = max;
-				else spans.item(i).textContent = skip + docs.length;
-			}
-
-			var spans = document.getElementsByClassName("count");
-			for ( var i = 0; i < spans.length; i++ ) {
-				spans.item(i).textContent = max;
-			}
-
-		});
-
-	}
-
-
-	function pagerClicked(){
-
-		clearTimeout(interval);
-
-		var pageslength = pagebuttons.length;
-
-	//  Get last page.
-		lastpage = parseInt( max / limit );
-
-	//  Get current page.
-		currentpage = parseInt( skip / limit );
-
-	//  Get current index.
-		currentindex = parseInt( currentpage % pageslength );
-
-		debugMode && console.log({"max":max, "skip":skip, "index": currentindex});
-
-	//  Page buttons numbering.
-
-		var num = parseInt( currentpage / pageslength ) * pageslength;
-
-		for( var i= 0; i < pagebuttons.length; i++) {
-			var page = num + i;
-			pagebuttons.item(i).skip = limit * page; // important!
-			pagebuttons.item(i).text = page + 1; // important! ( because is <a> and have text property )
-			pagebuttons.item(i).classList.remove("btn-primary");
-		}
-
-	//  Current button.
-
-		pagebuttons.item( currentindex ).classList.add("btn-primary");
-
-	//	Get items.
-
-		if ( max && skip < max ) {
-	//		interval = setTimeout( getItems, delay );
-		}
-
-	}
-
-
-	//  Pager.
-
-	//  For performance we count items only when we ask last page 
-	//  or we change droplist selectors. Not need to count on backward.
-
-	//  Page button.
-
-	for ( var i = 0; i < pagebuttons.length; i++ ) {
-
-		pagebuttons.item(i).addEventListener("click", function(){
-
-			if ( max && this.skip < max ) {
-				skip = this.skip;
-				pagerClicked();
-			}
-
-			debugMode && console.dir( this );
-
-		});
-
-	}
-
-	//  First page.
-
-	firstPageBtn.addEventListener("click", function(){
-
-		skip = 0;
-		pagerClicked();
-
-	});
-
-	//  Last page.
-
-	lastPageBtn.addEventListener("click", function(){
-
-		if ( max && max > 0 ) {
-
-			var lastpage = parseInt( max / limit );
-
-			if ( limit * lastpage < max ) {
-
-				skip = limit * lastpage;          //  limit * parseInt(max / limit);
-
-			} else {
-
-				skip = limit * ( lastpage - 1 );  //  limit * ( parseInt(max / limit) - 1 );
-
-			}
-
-		} else {
-
-			skip = 0;
-
-		}
-
-		pagerClicked();
-
-	//  Update count. (optional)
-
-		count();
-
-	});
-
-	//  Prev page.
-
-	$(prevPageBtn).on("click", function(){
-
-		if ( skip - limit < 0 ) {
-
-			skip = 0;
-
-		} else {
-
-			skip -= limit;
-		}
-
-		pagerClicked();
-
-	});
-
-	//  Next page.
-
-	nextPageBtn.addEventListener("click", function(){
-
-		var lastpage = parseInt( max / limit );
-
-		if ( skip + limit < max )
-
-			skip += limit;
-
-		else if ( skip + limit > max )
-
-			skip = limit * lastpage;
-
-		//  else if ( skip + limit == max ) skip;
-
-		pagerClicked();
-
-	});
-
-	//  Prev group.
-
-	prevGroupBtn.addEventListener("click", function(){
-
-		var offset = pagebuttons.length * limit;
-
-		if ( skip - offset < 0 ) {
-
-			skip = 0;
-
-		} else {
-
-			skip -= offset;
-		}
-
-		pagerClicked();
-
-	});
-
-	//  Next group.
-
-	nextGroupBtn.addEventListener("click", function(){
-
-		var offset = pagebuttons.length * limit;
-
-		if ( max > 0 ) {
-
-			var lastpage = parseInt( max / limit );
-
-			if ( skip + offset < max ) {
-
-				skip += offset;
-
-			} else if ( skip + offset > max ) {
-
-				if ( limit * lastpage < max ) {
-
-					skip = limit * lastpage;
-
-				} else {
-
-					skip = limit * ( lastpage - 1 );
-				}
-
-			} else if ( skip + offset == max ) {
-
-				skip = limit * ( lastpage - 1 );
-
-			}
-
-		} else {
-
-			skip = 0;
-
-		}
-
-		pagerClicked();
-
-	});
-
-</script>
+</div>
 
 <div hidden id="snipcart" data-api-key="MGY1ZGNjMWItZTk5NS00ZTFjLWExMGMtOWVlNjQxM2I2ZmYwNjM3MDI1NTA1ODY4NDc4NTkw"></div>
 <script src="https://cdn.snipcart.com/themes/v3.0.5/default/snipcart.js"></script>
