--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -43,8 +43,9 @@
     /*  vertical-align:middle !important;  */
         color: #fff;
         display:inline-block; 
-        height:48%; 
-        width:22.8rem;
+        height:360px; 
+        width:235px;
+		margin:10px;
     }
 
     .card-field-price {
@@ -73,6 +74,7 @@
         border:none;
         height:700px;
         min-width:320px;
+		max-width: 1600px;
         min-height:438px;
         max-height:705px;
         text-align:center;
@@ -106,7 +108,7 @@
 
     .snipcart-add-item {
         color:#fff;
-        width:100%;
+        width:80%;
         font-size:2rem;
         padding:6px 14px;
         border:1px solid #ddd;
