--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -81,6 +81,31 @@
         overflow:auto;
     }
 
+	.product-img {
+		max-width:100%;
+		height:auto;
+		margin:10px auto;
+	}
+
+	.product-title {
+		color:#fff;
+		font-size:1.5em;
+		font-weight:bold;
+		max-width:100%;
+		max-height:2em;
+		margin:0 auto 10px auto;
+		overflow:hidden;
+	}
+
+	.product-price {
+		color:#fff;
+		font-size:2em;
+		font-weight:bold;
+		max-width:100%;
+		max-height:3em;
+		margin:0 auto 10px auto;
+	}
+
     @media all and ( max-width: 640px ) {
 
         .well.product-card { 
@@ -495,18 +520,31 @@
 				var img = loader.load( url, function( img ){
 					img.classList.add("thumbnail");
 				});
-				img.style.cssText = "max-width:100%;height:auto;margin:0 auto 10px auto;";
+				img.classList.add("product-img");
+			//	img.style.cssText = "max-width:100%;height:auto;margin:0 auto 10px auto;";
 				card.appendChild(img);
+				
 
 				var title = document.createElement("div");
-				title.style.cssText = "color:#fff;font-size:1.5em;font-weight:bold;max-width:100%;max-height:2em;margin:0 auto 10px auto;overflow:hidden;";
+				title.classList.add("product-title");
+			//	title.style.cssText = "color:#fff;font-size:1.5em;font-weight:bold;max-width:100%;max-height:2em;margin:0 auto 10px auto;overflow:hidden;";
 				title.textContent = doc.title;
 				card.appendChild(title);
 
 				var price = document.createElement("div");
-				price.style.cssText = "color:#fff;font-size:2em;font-weight:bold;max-width:100%;max-height:3em;margin:0 auto 10px auto;";
+				price.classList.add("product-price");
+			//	price.style.cssText = "color:#fff;font-size:2em;font-weight:bold;max-width:100%;max-height:3em;margin:0 auto 10px auto;";
 				price.textContent = doc.value;
 				card.appendChild(price);
+
+			//	<a class="snipcart-add-item"
+			//	   data-item-id="BGD458-656-006" 
+			//	   data-item-name="moondust" 
+			//	   data-item-price="0.38" 
+			//	   data-item-image="https://i.imgur.com/beAmx5ut.png"
+			//	   data-item-url="https://sloothes.com/marketplace/backgrounds">
+			//		Add to cart
+			//	</a>
 
 				var button = document.createElement("a");
 				button.text = "Add to cart";
@@ -517,15 +555,6 @@
 				button.setAttribute("data-item-image", "https://i.imgur.com/"+doc.posx+"t."+doc.ext);
 				button.setAttribute("data-item-url", "/marketplace/backgrounds");
 				card.appendChild(button);
-
-			//	<a class="snipcart-add-item"
-			//	   data-item-id="BGD458-656-006" 
-			//	   data-item-name="moondust" 
-			//	   data-item-price="0.38" 
-			//	   data-item-image="https://i.imgur.com/beAmx5ut.png"
-			//	   data-item-url="https://sloothes.com/marketplace/backgrounds">
-			//		Add to cart
-			//	</a>
 
 				displayObjects.appendChild(card);
 
