--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -621,7 +621,7 @@
 	//	Get items.
 
 		if ( max && skip < max ) {
-	//		interval = setTimeout( getItems, delay );
+			interval = setTimeout( getItems, delay );
 		}
 
 	}
