--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -77,6 +77,7 @@
 		max-width: 1600px;
         min-height:438px;
         max-height:705px;
+		margin: 20px auto;
         text-align:center;
         overflow:auto;
     }
