--- a/backgrounds/index.html
+++ b/backgrounds/index.html
@@ -519,7 +519,7 @@
 				var loader = new THREE.ImageLoader();
 				var url = "https://i.imgur.com/"+doc.posx+"t."+doc.ext;
 				var img = loader.load( url, function( img ){
-					img.classList.add("thumbnail");
+				//	img.classList.add("thumbnail");
 				});
 				img.classList.add("product-img");
 				card.appendChild(img);
